exercise2.06/manifests/logoutput-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
        - name: logoutput
          image: anttitmh/logoutput
