exercise2.06/manifests/pong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-dep
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong
  template:
    metadata:
      labels:
        app: pong
    spec:
      containers:
        - name: pong
          image: anttitmh/pong
