exercise2.06/manifests/pong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong-svc
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: pong
  ports:
    - name: default
      port: 1234
      protocol: TCP
      targetPort: 3001
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3001
